compilateurDeca/src/test/deca/context/valid/objet/return_sous_typage.deca
// Description:
//    Test de contexte : Instruction return avec sous-typage.
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 13/01/2026

class A {}
class B extends A {}

class Factory {
    A create() {
        return new B();
    }

    A createNull() {
        return null;
    }
}

{
    Factory f = new Factory();
    A obj = f.create();
}