compilateurDeca/src/test/deca/context/invalid/objet/comparaison/float_egal_classe.deca
// Description:
//    Test de contexte : comparaison == type incompatible.
//
// Resultats:
//    Erreur contextuelle : Comparaison invalide entre A et float.
//
// Historique:
//    cree le 13/01/2026

class A {}
{
    A a = new A();
    if (a == 1.1) {
    }
}